# QT-Latex-Editor-Server

./: .gitignore  CMakeLists.txt  README.md  temp.tex
src/: CMakeLists.txt  main.cpp
src/utils/: compilHandler.cpp  compilHandler.h  dbCon.cpp  dbCon.h  queryHandler.cpp  queryHandler.h  queryallHandler.cpp  queryallHandler.h
